=========
CHANGELOG
=========

0.2.2 (2019-10-25)
------------------
* Patch security vulnerability: pin pillow>=6.2.0

0.2.1 (2019-10-12)
------------------

* Patch false-positive collisions for 3x3 grid

* Replace pytesseract (GPL-3) w/ tesserocr (MIT)

* Add test for reset() method

* Optimize wait time for regenerated cells

0.2.0 (2019-09-17)
------------------

* Add initial_state=OpenGround() as default argument in NotARobot()

0.1.3 (2019-08-21)
------------------

* Use parse_requirements for install_requires in setup.py

0.1.2 (2019-08-21)
------------------

* Parse requirements.in for install_requires in setup.py

0.1.1 (2019-08-21)
------------------

* Include requirements.txt in MANIFEST.in

0.1.0 (2019-08-21)
------------------

* First release on PyPI.