@@ -2,7 +2,7 @@
 # This file is autogenerated by pip-compile
 # To update, run:
 #
-#    pip-compile requirements.in
+#    pip-compile
 #
 absl-py==0.7.1            # via tensorboard, tensorflow
 astor==0.8.0              # via tensorflow
@@ -49,4 +49,4 @@ wrapt==1.11.2             # via tensorflow
 xlib==0.21
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.4.0        # via kiwisolver, markdown, protobuf, tensorboard
+# setuptools==41.6.0        # via kiwisolver, markdown, protobuf, tensorboard
